# grumpy_clippy

./: Cargo.toml  ReadME.md
src/: actions.rs  app_state.rs  cli.rs  config.rs  inspector.rs  main.rs  ui.rs  watcher.rs
src/analyzer/: actions.rs  complexity_inspector.rs  custom_rules.rs  git.rs  messages.rs  mod.rs
src/logger/: buffer.rs  config.rs  core.rs  macros.rs  mod.rs  model.rs
