[package]
name = "grumpy_clippy"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
bevy = "0.16.0"
bevy_spritesheet_animation = "2.1.0"
chrono = "0.4.41"
crossbeam = "0.8.4"
ctrlc = "3.4.6"
eframe = "0.31.1"
egui_extras = "0.31.1"
git2 = "0.20.2"
image = "0.25.6"
notify = "8.0.0"
once_cell = "1.21.3"
proc-macro2 = "1.0.95"
quote = "1.0.40"
regex = "1.11.1"
serde = "1.0.219"
serde_json = "1.0.140"
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit"] }
thiserror = "2.0.12"
toml = "0.8.22"
winit = "0.30.10"

[dev-dependencies]
tempfile = "3.19.1"
